// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField should render correctly 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-2ii60v {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-2ii60v[data-error='true'] {
  border: 1px solid #dd3252;
}

.cache-2ii60v[aria-disabled='true'] {
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:hover,
.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-t2av8k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-t2av8k:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-qc3n7b {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-qc3n7b::-webkit-outer-spin-button,
.cache-qc3n7b::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-qc3n7b::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::-moz-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b[disabled] {
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-1dons5m {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.cache-8bavuj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-8bavuj:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8bavuj:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-8bavuj:hover,
.cache-8bavuj:active {
  background: #eeeeff;
  color: #4f0599;
}

.cache-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp e1sgck4o0"
    >
      <div
        class="cache-6hw7ss e1sgck4o0"
      >
        <div
          aria-disabled="false"
          class="cache-2ii60v eiawj1g0"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="eiawj1g4 cache-t2av8k em6gco80"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-xmmyxm-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g eiawj1g3"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-qc3n7b eiawj1g2"
              id=":r0:"
              name="test"
              style="width: 16px;"
              type="number"
              value="0"
            />
            <span
              class="cache-1dons5m eiawj1g1"
            />
          </div>
          <button
            aria-label="Plus"
            class="eiawj1g4 cache-8bavuj em6gco80"
            type="button"
          >
            <div>
              <svg
                class="cache-18ka304-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-2ii60v {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-2ii60v[data-error='true'] {
  border: 1px solid #dd3252;
}

.cache-2ii60v[aria-disabled='true'] {
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:hover,
.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-t2av8k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-t2av8k:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-qc3n7b {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-qc3n7b::-webkit-outer-spin-button,
.cache-qc3n7b::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-qc3n7b::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::-moz-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b[disabled] {
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-2i31lf {
  color: #c4c9d6;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp e1sgck4o0"
    >
      <div
        class="cache-6hw7ss e1sgck4o0"
      >
        <div
          aria-disabled="true"
          class="cache-2ii60v eiawj1g0"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="eiawj1g4 cache-t2av8k em6gco80"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-xmmyxm-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g eiawj1g3"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-qc3n7b eiawj1g2"
              disabled=""
              id=":r5:"
              name="test"
              style="width: 16px;"
              type="number"
              value="0"
            />
            <span
              class="cache-2i31lf eiawj1g1"
            />
          </div>
          <button
            aria-label="Plus"
            class="eiawj1g4 cache-t2av8k em6gco80"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-xmmyxm-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-2ii60v {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-2ii60v[data-error='true'] {
  border: 1px solid #dd3252;
}

.cache-2ii60v[aria-disabled='true'] {
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:hover,
.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-8bavuj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-8bavuj:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8bavuj:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-8bavuj:hover,
.cache-8bavuj:active {
  background: #eeeeff;
  color: #4f0599;
}

.cache-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-qc3n7b {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-qc3n7b::-webkit-outer-spin-button,
.cache-qc3n7b::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-qc3n7b::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::-moz-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b[disabled] {
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-1dons5m {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.cache-t2av8k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-t2av8k:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp e1sgck4o0"
    >
      <div
        class="cache-6hw7ss e1sgck4o0"
      >
        <div
          aria-disabled="false"
          class="cache-2ii60v eiawj1g0"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="eiawj1g4 cache-8bavuj em6gco80"
            type="button"
          >
            <div>
              <svg
                class="cache-18ka304-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g eiawj1g3"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-qc3n7b eiawj1g2"
              id=":rf:"
              name="test"
              style="width: 32px;"
              type="number"
              value="20"
            />
            <span
              class="cache-1dons5m eiawj1g1"
            />
          </div>
          <button
            aria-label="Plus"
            class="eiawj1g4 cache-t2av8k em6gco80"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-xmmyxm-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-2ii60v {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-2ii60v[data-error='true'] {
  border: 1px solid #dd3252;
}

.cache-2ii60v[aria-disabled='true'] {
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:hover,
.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.cache-2ii60v:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-8bavuj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-8bavuj:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8bavuj:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-8bavuj:hover,
.cache-8bavuj:active {
  background: #eeeeff;
  color: #4f0599;
}

.cache-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-qc3n7b {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-qc3n7b::-webkit-outer-spin-button,
.cache-qc3n7b::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-qc3n7b::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::-moz-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b::placeholder {
  color: #b2b6c3;
}

.cache-qc3n7b[disabled] {
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-1dons5m {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp e1sgck4o0"
    >
      <div
        class="cache-6hw7ss e1sgck4o0"
      >
        <div
          aria-disabled="false"
          class="cache-2ii60v eiawj1g0"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="eiawj1g4 cache-8bavuj em6gco80"
            type="button"
          >
            <div>
              <svg
                class="cache-18ka304-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g eiawj1g3"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-qc3n7b eiawj1g2"
              id=":ra:"
              name="test"
              style="width: 32px;"
              type="number"
              value="10"
            />
            <span
              class="cache-1dons5m eiawj1g1"
            />
          </div>
          <button
            aria-label="Plus"
            class="eiawj1g4 cache-8bavuj em6gco80"
            type="button"
          >
            <div>
              <svg
                class="cache-18ka304-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
